--- a/search.html
+++ b/search.html
@@ -48,7 +48,7 @@
        let ducks = [];
 	   async function getAll(){
 		let host = "http://localhost:8080";
-        return fetch(host + "/ducks").then((response) => response.json())});
+        return fetch(host + "/ducks").then((response) => response.json());
 	   }
 
       async function search() { 
