--- a/pond.html
+++ b/pond.html
@@ -27,21 +27,21 @@
 	</head>
 	<body>
 		<div class="card">
-			<img src="http://localhost:8080/ducks/1/image" alt="Avatar" style="width:100%">
+			<img src="https://ducksservice-ethstone.onrender.com/ducks/1/image" alt="Avatar" style="width:100%">
 			<div class="container">
 				<h4><b>1</b></h4>
 				<p>Mallard</p>
 			</div>
 		</div>
 		<div class="card">
-			<img src="http://localhost:8080/ducks/2/image" alt="Avatar" style="width:100%">
+			<img src="https://ducksservice-ethstone.onrender.com/ducks/2/image" alt="Avatar" style="width:100%">
 			<div class="container">
 				<h4><b>2</b></h4>
 				<p>Mallard</p>
 			</div>
 		</div>
 		<div class="card">
-			<img src="http://localhost:8080/ducks/3/image" alt="Avatar" style="width:100%">
+			<img src="https://ducksservice-ethstone.onrender.com/ducks/3/image" alt="Avatar" style="width:100%">
 			<div class="container">
 				<h4><b>3</b></h4>
 				<p>Rubber</p>
