--- a/add.html
+++ b/add.html
@@ -12,7 +12,7 @@
 	<button onclick="addTheDuck()">Add the duck</button>
 	
 	<script>
-	let host = "https://ducksservice-ethstone.onrender.com/";
+	let host = "https://ducksservice-ethstone.onrender.com";
 		async function addTheDuck(){
 			let message = "";
 			let duckId = document.getElementById("duckId").value;
